# MFIDS

./: .gitignore  README.md  Stuffsweneed.md  build-site.sh  pyproject.toml  todo.md
Intruder_Detection/: main.py
Intruder_Detection/camera_stream/: detect_faces.py
Intruder_Detection/controls/: solenoid.py
Intruder_Detection/solenoid/: control.py
authsysproject/: README.md
authsysproject/authsysproject/: asgi.py  settings.py  urls.py  wsgi.py
authsysproject/static/users/css/: main.css
authsysproject/users/: urls.py  views.py
authsysproject/users/static/users/css/: main.css
authsysproject/users/templates/users/: 404.html  aboutus.html  base.html  home.html  live_stream.html  login.html  logout.html  profile.html  profilemanage.html  register.html
camera-stream/: detectFaces.py  push.py
lsyncd/: lsyncd.config  mac.lsyncd.config
