[tool.poetry]
name = "mfids"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

[tool.poetry.group.mfids-site]
optional = true

[tool.poetry.group.mfids-site.dependencies]
django = "^4.2.6"
django-crispy-forms = "^2.1"
crispy-bootstrap4 = "^2023.1"
whitenoise = {extras = ["brotli"], version = "^6.6.0"}
gunicorn = "^21.2.0"

[tool.poetry.group.mfids-detect]
optional = true

[tool.poetry.group.mfids-detect.dependencies]
opencv-python = "^4.8.1.78"
mjpeg-streamer = "^2023.10.14"
face-recognition = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
